[gd_scene load_steps=5 format=3 uid="uid://fdr1rpk4bp1t"]

[ext_resource type="Script" uid="uid://chl2jix5td472" path="res://scripts/MainMenu.gd" id="1_06t4h"]

[sub_resource type="Animation" id="Animation_06t4h"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../FadeBox:color:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="Animation" id="Animation_7vrkn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../FadeBox:color:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fu7sn"]
_data = {
&"RESET": SubResource("Animation_7vrkn"),
&"fade_out": SubResource("Animation_06t4h")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 1
script = ExtResource("1_06t4h")

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 1206.0
offset_bottom = 647.0
mouse_filter = 2
theme_override_constants/margin_left = 300
theme_override_constants/margin_right = 300

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Lorem Ipsum Game"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
z_index = 1
layout_mode = 2
mouse_filter = 1
theme_override_font_sizes/font_size = 32
text = "Start"

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
z_index = 1
layout_mode = 2
mouse_filter = 1
theme_override_font_sizes/font_size = 32
text = "Quit"

[node name="FadeBox" type="ColorRect" parent="."]
z_index = 2
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
mouse_filter = 2
color = Color(0, 0, 0, 0)

[node name="FadeAnimator" type="AnimationPlayer" parent="FadeBox"]
unique_name_in_owner = true
root_node = NodePath("../../MarginContainer")
libraries = {
&"": SubResource("AnimationLibrary_fu7sn")
}

[connection signal="pressed" from="MarginContainer/VBoxContainer/StartButton" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_pressed"]
[connection signal="animation_finished" from="FadeBox/FadeAnimator" to="." method="_on_fade_animator_animation_finished"]
